--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -18,27 +18,28 @@ jobs :
     name : Setup build, publish & deploy
     runs-on : unbuntu-latest
 
-  steps:
-      uses : actions/checkout@v2
+    steps:
+      - name : Checkout Respository
+        uses : actions/checkout@v2
 
-    - name : Setup Google Cloud CLI
-      uses : GoogleCloudPlatform/github-action/setup-gcloud@0.1.3
-      env :
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-      with :
-        service_account_key : ${{secrets.GKE_KEY}}
-        project_id : ${{secrets.GKE_PROJECT}}
+      - name : Setup Google Cloud CLI
+        uses : GoogleCloudPlatform/github-action/setup-gcloud@0.1.3
+        env :
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+        with :
+          service_account_key : ${{secrets.GKE_KEY}}
+          project_id : ${{secrets.GKE_PROJECT}}
 
-    - name : Configure Docker
-      run :  gcloud --quiet auth configure-docker
+      - name : Configure Docker
+        run :  gcloud --quiet auth configure-docker
 
-    - name : Get GKE Credentials
-      run : gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "GKE_ZONE"
+      - name : Get GKE Credentials
+        run : gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "GKE_ZONE"
 
-    - name : Build Docker Image
-      run : docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
+      - name : Build Docker Image
+        run : docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
 
-    - name : Publish Docker Image To GCR
-      run : docker push "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
+      - name : Publish Docker Image To GCR
+        run : docker push "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
 
     
