--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -23,7 +23,7 @@ jobs :
         uses : actions/checkout@v2
 
       - name : Setup Google Cloud CLI
-        uses : GoogleCloudPlatform/github-action/setup-gcloud@0.1.3
+        uses : google-github-actions/setup-gcloud@master
         env :
           ACTIONS_ALLOW_UNSECURE_COMMANDS: true
         with :
